# GLotus

./: .gitignore  Cargo.toml  README.md  TODO.md  glotus.puml
case_01_plane/assets/shaders/: fs_0.frag  vs_0.vert
case_01_plane/src/: main.rs
case_02_cube/assets/shaders/: fs.frag
case_02_cube/src/: main.rs
case_03_phong/assets/shaders/: fs.frag  vs.vert
case_03_phong/src/: main.rs
case_04_moving_light/: Cargo.toml
case_04_moving_light/assets/shaders/: fs.frag
case_04_moving_light/src/: main.rs
case_05_load_mesh/: Cargo.toml
case_05_load_mesh/src/: main.rs
case_06_depth_test/: Cargo.toml
case_06_depth_test/src/: main.rs
case_07_outline/: Cargo.toml
case_07_outline/src/: main.rs
examples/case_01_plane/: main.rs
examples/case_02_cube/: main.rs
examples/case_03_phong/: main.rs
examples/case_04_moving_light/: main.rs
examples/case_05_load_mesh/: main.rs
examples/case_06_depth_test/: main.rs
examples/case_07_outline/: main.rs
examples/case_08_blend/: main.rs
examples/case_08_grass/: main.rs
examples/case_09_to_texture/: main.rs
examples/case_10_post_process/: main.rs
examples/case_11_skybox/: main.rs
examples/case_12_visual_normal/: main.rs
examples/case_13_instancing/: main.rs
examples/case_14_blinn_phong/: main.rs
glotus/: Cargo.toml
glotus/src/: app.rs  app_config.rs  lib.rs
src/: app.rs  base.rs  context.rs
src/app/: app.rs  app_config.rs  mod.rs
src/base/: mod.rs  transform.rs
src/context/: app_context.rs  asset.rs  ecs.rs  event.rs  input.rs  mod.rs  pipeline.rs  window.rs
src/utils/: log_builder.rs
(+238 files in other folders)
